# MediSum

./: .replit  MediSumApp_1.py  MediSumApp_2.py  MediSumApp_3.py  MidSumApp_1.py  README.md  app.py  notes 1 malke.docx  pyproject.toml  requirements.txt
model/: LLM
templates/: MediSumHome.html  MediSumHome_1.html  MediSumHome_2.html  home.html
