[tool.poetry]
name = "repl-nix-medisum-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_medisum_1"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
transformers = "^4.43.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
